--- a/_posts/杂.md
+++ b/_posts/杂.md
@@ -2,7 +2,7 @@
 title: 2023年11-12月比赛学习记录
 date: 2023-12-31 00:00:00 +0800
 categories: [比赛WP, 学习笔记]
-tags: [CTF, WEB, REVERSE]
+tags: [CTF, WEB]
 ---
 
 # 杂
@@ -462,3 +462,4 @@ $b->effort=$c;
 
 
 echo urlencode(serialize($a));
+
